@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 pydot contributors
+#
+# SPDX-License-Identifier: MIT
+
 name: "Label merge conflicts"
 on:
   # So that PRs touching the same files as the push are updated
