@@ -1,0 +1,15 @@
+Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0/
+Upstream-Name: pydot
+Upstream-Contact: Łukasz <lukaszlapinski7@gmail.com>
+Source: https://github.com/pydot/pydot
+
+# Sample paragraph, commented out:
+#
+# Files: src/*
+# Copyright: $YEAR $NAME <$CONTACT>
+# License: ...
+
+Files: test/graphs/* test/my_tests/* test/from-past-to-future/*
+Copyright: pydot contributors
+License: MIT
+
