@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 pydot contributors
+#
+# SPDX-License-Identifier: MIT
+
 [zest.releaser]
 python-file-with-version = src/pydot/__init__.py
 release=no
