@@ -1,5 +1,9 @@
 #!/bin/sh
 
+# SPDX-FileCopyrightText: 2024 pydot contributors
+#
+# SPDX-License-Identifier: MIT
+
 for dir in */; do
     magick composite $dir/err_pydot.jpeg \
         -compose difference $dir/err_graphviz.jpeg \
