@@ -1,4 +1,6 @@
 # `pydot` changelog
+# SPDX-License-Identifier: MIT
+# SPDX-FileCopyrightText: pydot contributors
 
 Pydot versions since 1.4.2 adhere to [PEP 440-style semantic versioning]
 (https://www.python.org/dev/peps/pep-0440/#semantic-versioning).
